route to retrieve api key added
